# lawlesst.github.com

./: .env  .gitignore  Makefile  README.md  about.html  app.py  archives.html  authors.html  baseballdb.html  categories.html  feed.rss  feed.xml  freeze.py  index.html  index.md  mark.py  presentations.html  projects.html  publish.sh  pyproject.toml  requirements.txt  settings.py  tags.html  template.html
author/: ted-lawless.html
category/: notebook.html
media/: style.css
notebook/: baseball-datasette-full.html  baseball-datasette.html  citation-finder.html  citation-finder.md  constellate-keyphrases.html  datasette-hosting.html  delivery.html  delivery.md  heroku360link.html  heroku360link.md  illiad-api.html  illiad-api.md  index.html  index.md  journaltoc-reconcile.html  journaltoc-reconcile.md  mssql-server-docker.html  nyer-fiction.html  orgref-rdf.html  pelican.html  petl-ld.html  pyjniusvivo.html  pyjniusvivo.md  python-class-inspection.html  python-jsonld.html  rdflib-neptune.html  rdflib-stardog.html  rdflib-stardog.md  researcher-profile-data.html  sample.html  sample.md  select2-rdf.html  solr-etags.html  solr-etags.md  sparql-dataframe.html  spotify-playlists.html  vivo-caching.html  vivo-caching.md  vivo-listview.html  vivo-rdfalchemy.html  (+4 more)
output/: archives.html  authors.html  feed.rss  index.html  tags.html
pelican/: settings.py
presentations/: index.html
projects/: index.html  index.md  mark.py  projects.md  style.css
static/: styles.css
templates/: archive.html  base.html  index.html  page.html  post.html  rss.xml.jinja2
(+108 files in other folders)
