[tool.poetry]
name = "lawlesst.github.com"
version = "0.1.0"
description = ""
authors = ["Ted Lawless <t.lawless@digital-science-com>"]

[tool.poetry.dependencies]
python = "^3.9"
ghp-import = {git = "https://github.com/davisp/ghp-import.git"}
frozen-flask = {git = "https://github.com/Frozen-Flask/Frozen-Flask.git"}
markdown2 = "^2.4.2"
feedgen = "^0.9.0"
Pygments = "^2.11.2"
dateparser = "^1.1.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
