[tool.poetry]
name = "lawlesst.github.com"
version = "0.1.0"
description = ""
authors = ["Ted Lawless <lawlesst@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
markdown2 = "^2.4.2"
feedgen = "^0.9.0"
Pygments = "^2.11.2"
dateparser = "^1.1.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
frozen-flask = "^0.18"
ghp-import = "^2.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
